# udptoserial

./: .gitignore  BoostWin32Notes.txt  Makefile  Makefile.am  README.md  UDP_over_serial_notes.txt  base64.c  base64.h  configure.ac  main.c  parser.c  parser.h  pktmsg.h  queue.c  queue.h  serial.c  serial.h  socket.c  socket.h  throttle.c  udptoserial.docx  udptoserial.sln
CameraOverUDP/: CameraOverUDP.csproj  CameraOverUDP_TemporaryKey.pfx  MainPage.xaml.cs  Package.appxmanifest
CameraOverUDP/Properties/: AssemblyInfo.cs
hack/: async_udp_echo_server.cpp  build.bat  build.sh  logtest.cpp
halfduplex/: Half_duplex.cpp  Half_duplex.h  Makefile.am  halfduplex.vcxproj  main.cpp
libhorizr/: Makefile.am  README.md  bytevector.cpp  bytevector.h  hdr.h  ip.cpp  ip.h  libhorizr.h  libhorizr.vcxproj  libhorizr.vcxproj.filters  slip.cpp  slip.h  socket.cpp  socket.h
libhorizr_test/: libhorizr_test.vcxproj  libhorizr_test.vcxproj.filters  slip.cpp  stdafx.cpp
udptoserial/: Configuration.cpp  Configuration.h  IPv4.cpp  IPv4.h  Makefile  Makefile.am  README.md  README.txt  Serial_port.cpp  Serial_port.h  Server.cpp  Server.h  Slip.cpp  Tcp_client_handler.cpp  Tcp_client_handler.h  Tcp_server_handler.cpp  Tcp_server_handler.h  Udp_ports.cpp  Udp_ports.h  ini.cpp  ini.h  input_queue.cpp  input_queue.h  iso1745.cpp  iso1745.h  main.c  main.cpp  queue.c  serial.c  socket.h  stdafx.cpp  udp_packet.cpp  udp_packet.h  udptoserial.cpp  udptoserial.ini  udptoserial.sln  udptoserial.vcxproj  udptoserial.vcxproj.filters
udptoserial/CameraOverUDP/: App.xaml  App.xaml.cs  MainPage.xaml
